--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "client",
-  "version": "0.0.0",
-  "main": "src/index.ts",
+  "name": "@webrtc-file-transfer/client",
+  "version": "0.1.0",
   "license": "GPL-3.0",
-  "private": true,
   "scripts": {
     "dev": "webpack serve --mode=development --open",
     "build": "webpack --mode=production"
   },
+  "dependencies": {
+    "@webrtc-file-transfer/shared": "0.1.0"
+  },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.3.2",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.3",
