--- a/shared/package.json
+++ b/shared/package.json
@@ -1,8 +1,14 @@
 {
   "name": "@webrtc-file-transfer/shared",
   "version": "0.1.0",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "license": "GPL-3.0",
+  "scripts": {
+    "build": "tsc"
+  },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "typescript": "^4.4.3"
   }
 }
