--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "client",
     "shared"
   ],
+  "scripts": {
+    "lint": "yarn prettier . --write && yarn eslint . --fix",
+    "lint-nofix": "yarn prettier . --check && yarn eslint ."
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
@@ -16,6 +20,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.24.2",
+    "prettier": "^2.4.0",
     "typescript": "^4.4.3"
   }
 }
