--- a/shared/package.json
+++ b/shared/package.json
@@ -5,6 +5,7 @@
   "types": "build/index.d.ts",
   "license": "GPL-3.0",
   "scripts": {
+    "dev": "tsc --w",
     "build": "tsc"
   },
   "devDependencies": {
