feat(monorepo): :tada: add clean script to all packages
Wrote clean script to delete build folder in all packages. Also updated tsconfig in all to disable incremental compilation (outputting tsconfig.tsbuildinfo).

--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "license": "GPL-3.0",
   "scripts": {
     "dev": "webpack serve --mode=development --open",
+    "clean": "rm -rf build",
     "build": "webpack --mode=production"
   },
   "dependencies": {
