--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "license": "GPL-3.0",
   "private": true,
   "scripts": {
+    "dev": "(NODE_ENV=development concurrently -n tsc,node -c cyan,green \"tsc --w\" \"nodemon build/index.js\")",
     "clean": "rm -rf build",
     "build": "tsc",
     "start": "(NODE_ENV=production node build/index.js)"
@@ -14,7 +15,9 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.9.1",
+    "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
+    "nodemon": "^2.0.12",
     "typescript": "^4.4.3"
   },
   "engines": {
