feat(monorepo): :tada: migrate to yarn 2
Migrated to yarn 2 in order to later use yarn workspace plugin to write cleaner scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ build/
 .DS_Store
 yarn-error.log
 tsconfig.tsbuildinfo
+
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
