feat(monorepo): :tada: add root scripts
Added clean, build, dev, and start scripts to project root. Installed yarn workspaces plugin.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "shared"
   ],
   "scripts": {
+    "dev": "yarn workspaces foreach -pvi run dev",
+    "clean": "yarn workspaces foreach -p run clean",
+    "build": "yarn workspaces foreach -ptvi run build",
+    "start": "yarn build && yarn workspace @webrtc-file-transfer/server run start",
     "lint": "yarn prettier . --write && yarn eslint . --fix",
     "lint-nofix": "yarn prettier . --check && yarn eslint ."
   },
