feat(file transfer): :sparkles: initialize socket.io on client and server
Installed socket.io packages to client and server. Wrote code to test for connection and log socket id. Configured proxy in webpack dev server.

--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --mode=production"
   },
   "dependencies": {
-    "@webrtc-file-transfer/shared": "0.1.0"
+    "@webrtc-file-transfer/shared": "0.1.0",
+    "socket.io-client": "^4.2.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
