--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,15 @@
     "start": "(NODE_ENV=production node build/index.js)"
   },
   "dependencies": {
+    "@webrtc-file-transfer/shared": "0.1.0",
     "express": "^4.17.1",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.9.1",
+    "@types/uuid": "^8.3.1",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.12",
