--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "css-loader": "^6.7.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.24.2",
     "prettier": "^2.4.0",
+    "style-loader": "^3.3.1",
     "typescript": "^4.4.3"
   }
 }
