--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.24.2",
+    "mini-css-extract-plugin": "^2.7.0",
     "prettier": "^2.4.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "webrtc-adapter": "^8.2.0"
   }
 }
