--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "(NODE_ENV=development concurrently -n tsc,node -p \"[{name}] [{time}]\" -t \"hh:mm:ss\" \"tsc --w\" \"nodemon build/index.js\")",
     "clean": "rm -rf build",
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "start": "(NODE_ENV=production node build/index.js)"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.12",
+    "tsc-alias": "^1.7.1",
     "typescript": "^4.4.3"
   },
   "engines": {
