--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "license": "GPL-3.0",
   "private": true,
   "scripts": {
-    "dev": "(NODE_ENV=development concurrently -n tsc,node -p \"[{name}] [{time}]\" -t \"hh:mm:ss\" \"tsc --w\" \"nodemon build/index.js\")",
+    "dev": "(NODE_ENV=development ts-node src/index.ts)",
     "clean": "rm -rf build",
     "build": "tsc && tsc-alias",
     "start": "(NODE_ENV=production node build/index.js)"
@@ -22,7 +22,9 @@
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.12",
+    "ts-node": "^10.9.1",
     "tsc-alias": "^1.7.1",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.4.3"
   },
   "engines": {
