--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,13 @@
     "dev": "(NODE_ENV=development ts-node src/index.ts)",
     "clean": "rm -rf build",
     "build": "tsc && tsc-alias",
-    "start": "(NODE_ENV=production node build/index.js)"
+    "start": "(NODE_ENV=production pm2 start build/index.js --name file-pie)",
+    "stop": "pm2 stop file-pie"
   },
   "dependencies": {
     "@webrtc-file-transfer/shared": "0.1.0",
     "express": "^4.17.1",
+    "pm2": "^5.2.2",
     "socket.io": "^4.2.0",
     "uuid": "^8.3.2"
   },
