--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@webrtc-file-transfer/shared": "0.1.0",
-    "socket.io-client": "^4.2.0"
+    "socket.io-client": "^4.2.0",
+    "webrtc-adapter": "^8.2.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
