--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "dev": "(NODE_ENV=development ts-node src/index.ts)",
     "clean": "rm -rf build",
     "build": "tsc && tsc-alias",
-    "start": "(NODE_ENV=production pm2 start build/index.js --name file-pie)",
+    "start": "(NODE_ENV=production node build/index.js)",
     "stop": "pm2 stop file-pie"
   },
   "dependencies": {
@@ -30,6 +30,6 @@
     "typescript": "^4.4.3"
   },
   "engines": {
-    "node": "14.17.0"
+    "node": "14.21.1"
   }
 }
